<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".info_add.Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/arrow_back_ios_fill0_wght400_grad0_opsz48">
        </ImageButton>

    </LinearLayout>

    <!-- 아이디 EditText  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="false"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua_font"
            android:hint="@string/loginemailInput" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 비밀번호 EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pwET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua_font"
            android:hint="@string/loginpwInput"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 로그인 Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bmjua_font"
            android:text="@string/login" />
        <Button
            android:id="@+id/kakologinBtn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bmjua_font"
            android:text="@string/kakaologin" />
    </LinearLayout>

</LinearLayout>