<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".info_add.info_add_id">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_ios_fill0_wght400_grad0_opsz48"
            android:background="@color/white">
        </ImageButton>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        android:textSize="50px"
        android:fontFamily="@font/bmjua_font"
        android:textColor="@color/black"
        android:text="@string/info_add_private">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!-- 이름 입력 창 -->
        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_border_basic"
            android:fontFamily="@font/bmjua_font"
            android:hint="@string/info_add_name"
            android:inputType="text"
            android:padding="13dp" />

        <!-- 사용할 닉네임 -->
        <EditText
            android:id="@+id/nickname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_border_basic"
            android:fontFamily="@font/bmjua_font"
            android:hint="@string/info_add_nick"
            android:inputType="text"
            android:padding="13dp" />

        <!-- 전화번호 입력 창 -->
        <EditText
            android:id="@+id/tel"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_border_basic"
            android:fontFamily="@font/bmjua_font"
            android:hint="@string/info_add_tel"
            android:inputType="text"
            android:padding="13dp" />

        <!-- 생일 입력창 나중에 검색해보고 선택 창으로 변환 예정 -->
        <Button
            android:id="@+id/birthday"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/bmjua_font"
            android:onClick="showDatePicker"
            android:padding="13dp"
            android:text="생일을 입력해주세요!" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/bmjua_font"
            android:text="회원가입 완료!">
        </Button>
    </LinearLayout>

</LinearLayout>