<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".info_add.info_add_id">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_ios_fill0_wght400_grad0_opsz48"
            android:background="@color/white">
        </ImageButton>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        android:textSize="50px"
        android:fontFamily="@font/bmjua_font"
        android:textColor="@color/black"
        android:text="@string/info_add_password">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bmjua_font"
                android:hint="@string/loginpwInput"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/one_more_input_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bmjua_font"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/next_btn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/bmjua_font"
            android:text="다음 단계로">
        </Button>
    </LinearLayout>

</LinearLayout>